# dataset-exploration

./: .gitignore  Cargo.toml  README.md
data/mnist-digits/: nn-config.json  nn-config2.json
notebooks/breast-cancer-wisconsin/: breast cancer data - README.txt  breast cancer data.ipynb
notebooks/titanic/: titanic.ipynb
src/examples/: nn.rs
src/mnist-digits/: mnist-digits.rs  mnist_digits.rs  read_csv.rs
src/mnist-digits/file_opts/: file_ops.rs  mod.rs  read_csv.rs  read_json.rs
src/mnist-digits/models/: config.rs
