[package]
name = "dataset-exploration"
version = "0.0.1"
edition = "2018"
documentation = ""
keywords = ["Rust", "Machine Learning"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/brother-wolf/dataset-exploration"
description = "Experiments in Machine Learning"


[dependencies]
nn = "0.1.6"
csv = "1.1.4"
ndarray = "0.13.1"
structopt = "0.3.21"
serde_json = "1.0"

[[bin]]
name = "nn"
path = "src/examples/nn.rs"

[[bin]]
name = "mnist-digits"
path = "src/mnist-digits/mnist_digits.rs"

[profile.release]
opt-level = 3